# toc

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/toc/: generator.py  toc.py  tock.py  tocker.py
src/tocker/: tocker.py  tocker_cli.py  tocks.py
src/tocxer/: tocxer_cli.py  tocxs.py
