[project]
authors = [
  {name = "Mark Servilla", email = "mark.servilla@gmail.com"}
]
dependencies = [
  "click>=8.2..1,<9",
  "daiquiri>=3.0.0,<4",
]
name = "tocker"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13,<3.14"
dynamic = ["version"]

[project.scripts]
tocker = "tocker.tocker:tocker"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/tocker/VERSION.txt"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.sdist]
only-include = ["src"]
