[project]
authors = [
  {name = "Mark Servilla", email = "mark.servilla@gmail.com"}
]
dependencies = [
  "click>=8.2.1,<9",
  "daiquiri>=3.0.0,<4",
]
name = "tocxer"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13,<3.14"
dynamic = ["version"]

[project.scripts]
tocxer = "tocxer.tocxer_cli:tocxer"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/tocxer/VERSION.txt"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.sdist]
only-include = ["src"]
exclude = [
  "*.log"
]

[tool.hatch.build.targets.wheel]
packages = ["src/tocxer"]
exclude = [
  "*.log"
]
